# ds-storm-impact-harmonisation

./: .gitignore  CLAUDE.md  Procfile  README.md  adm0_exp.ipynb  adm0_exp.md  adm0_exp_app.py  constants.py  index.html  main.py  pyproject.toml  requirements.txt  total_pop_calc.ipynb  total_pop_calc.md
.github/workflows/: cron-trigger-gdacs-monitor.yml  daily-gdacs-monitor-email.yml  merge-cerf-exposure_chd-ds-seas5-viz(cerf-rr).yml  usa-radii-exp_chd-pa-aa-fji-storms-app(global-cyclones).yml
app/: cerf_predictor.py  pyproject.toml
artefacts/01_merge_cerf_exposure/: findings.md
assets/: adm1_exposure_data.json  exposure_data.json  styles.css
book/: 01-data-merge.qmd  02-analysis.qmd  02b-analysis-cerf-api.qmd  02c-analysis-inform.qmd  03-appendix-adam-gdacs.qmd  03-gdacs-realtime.qmd  04-nhc-wsp-exploration.qmd  05-gdacs-nhc-matching.qmd  06-gdacs-episodes.qmd  07-exposure-method-comparison.qmd  08-pdc-evaluation.qmd  _publish.yml  _quarto.yml  custom.css  index.qmd
docs/: README.md  cerf_gms_api.md  fts_hpc_api.md  inform_risk_api.md  pdc_api.md
pipelines/: adam_historical_exposure.py  adam_historical_national_exposure.py  gdacs_historical_exposure.py  gdacs_historical_national_exposure.py  join_historical_exposure.py  join_historical_national_exposure.py
scripts/: cache_gdacs_episodes.py  cache_pdc_sinlaku.py  daily_gdacs_monitor_email.py  rebuild_gdacs_historical_exposure.py  refresh_inform_composite.py
src/: gdacs_monitor_email.py  monitor.py
src/datasets/: cerf.py  gdacs.py  inform.py
src/models/: cerf_inform.py
src/utils/: exposure.py
